# zina

./: .env.example  .gitignore  ADMIN_SETUP.md  BUGFIX_ADMIN_ORDERS_DISPLAY.md  BUGFIX_PROXY_AND_ADMIN.md  CHANGES_SUMMARY.md  CREATE_FIRST_ADMIN.md  Dockerfile  FIX_SUMMARY.md  PER_ROLE_COLLAPSE.md  QUICK_TEST.md  README.md  ROLES_COLLAPSE_FEATURE.md  SECURITY_FIXES.md  app.py  docker-compose.yml  models.py  package.json  pre-commit-config.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  tailwind.config.js  test_login_display.html  test_ordering_responsive.html  test_responsive_landing.html  test_scroll_functionality.html  test_separate_auth.html
.claude/: settings.local.json
.github/workflows/: ci.yml
docs/: DEVELOPMENT.md
documents/: ADMIN_DASHBOARD.md  ADMIN_GUIDE.md  ARCHITECTURE.md  CONTRIBUTING.md  GUIDE_VISUEL.md  IMPLEMENTATION_ROADMAP.md  PLAN_DEVELOPPEMENT_FRANCAIS.md  PROJECT_ANALYSIS.md  PROJET_COMPLET.md  RESUME_COMMANDE.md  RESUME_PROJET.md  SYSTEME_COMMANDE.md  UI_UX_BEST_PRACTICES.md  USER_EXPERIENCE_GUIDE.md  ZINA_PROFESSIONAL_PROPOSAL.md  ZINA_WEBSITE_DOCUMENTATION.md
scripts/: setup.sh
static/css/: admin.css  category-image-manager.css  ordering.css  shared.css  tailwind.input.css  zina-ultimate.css
static/js/: admin-access.js  admin-menus.js  admin.js  ordering-api.js  ordering-auth.js  ordering-cart.js  ordering-formulas.js  ordering-menu.js  ordering.js  utils.js  zina-activity.js  zina-deals.js  zina-gamification.js  zina-order.js  zina-particles.js  zina-voice.js
templates/: admin.html  index.html  kitchen.html  leaderboard.html  login.html  ordering.html  register.html
templates/test/: test_image_upload.html  test_loader_centering.html  test_orders_loader.html  test_sidebar_persistence.html
zina_app/: __init__.py  models.py  routes.py
zina_app/api/: __init__.py  constants.py  features_routes.py  routes.py
zina_app/api/admin/: __init__.py  routes.py
zina_app/config/: __init__.py  default.py  formulas.json  openapi.yaml
zina_app/models/: __init__.py
zina_app/services/: __init__.py  category_image_service.py  database_service.py
zina_app/test/: test_api.py  test_category_images.py  test_models.py  test_upload_api.py
