# ========================================
# ZINA Cantine BAD - Project Configuration
# ========================================

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zina-cantine-bad"
version = "2.0.0"
description = "Professional restaurant management system for BAD"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "ZINA Team", email = "contact@zina-cantine.ci"}
]
maintainers = [
    {name = "ZINA Team", email = "contact@zina-cantine.ci"}
]
keywords = ["restaurant", "management", "cantine", "bad", "zina"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Framework :: Flask",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Application",
    "Topic :: Office/Business",
    "Topic :: Software Development :: Libraries :: Application Frameworks"
]
requires-python = ">=3.8"
dependencies = [
    "Flask==2.3.3",
    "supabase==1.0.4",
    "python-dotenv==1.0.0",
    "PyJWT==2.8.0",
    "marshmallow==3.20.1",
    "Flask-CORS==4.0.0",
    "Flask-Limiter==3.5.0",
    "redis==5.0.1",
    "celery==5.3.4",
    "psycopg2-binary==2.9.9",
    "SQLAlchemy==2.0.23",
    "alembic==1.12.1",
    "Pillow==10.1.0",
    "requests==2.31.0",
    "python-magic==0.4.27",
    "qrcode[pil]==7.4.2",
    "reportlab==4.0.7",
    "openpyxl==3.1.2",
    "stripe==7.5.0",
    "twilio==8.10.3",
    "sentry-sdk==1.38.0",
    "structlog==23.2.0",
    "prometheus-client==0.19.0"
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "pytest-cov==4.1.0",
    "pytest-mock==3.12.0",
    "pytest-flask==1.3.0",
    "pytest-asyncio==0.21.1",
    "pytest-xdist==3.3.1",
    "black==23.11.0",
    "flake8==6.1.0",
    "isort==5.12.0",
    "mypy==1.7.1",
    "pylint==3.0.3",
    "bandit==1.7.5",
    "pre-commit==3.5.0",
    "sphinx==7.2.6",
    "sphinx-rtd-theme==1.3.0"
]
docs = [
    "sphinx==7.2.6",
    "sphinx-rtd-theme==1.3.0",
    "mkdocs==1.5.3",
    "mkdocs-material==9.4.8"
]
test = [
    "pytest==7.4.3",
    "pytest-cov==4.1.0",
    "pytest-mock==3.12.0",
    "pytest-flask==1.3.0",
    "pytest-asyncio==0.21.1",
    "pytest-xdist==3.3.1",
    "httpx==0.25.2",
    "requests-mock==1.11.0",
    "responses==0.23.3",
    "fakeredis==2.20.1",
    "freezegun==1.2.2"
]
monitoring = [
    "prometheus-client==0.19.0",
    "sentry-sdk==1.38.0",
    "structlog==23.2.0",
    "psutil==5.9.6"
]

[project.urls]
Homepage = "https://github.com/zina-cantine/zina-bad"
Documentation = "https://zina-cantine-bad.readthedocs.io"
Repository = "https://github.com/zina-cantine/zina-bad.git"
"Bug Tracker" = "https://github.com/zina-cantine/zina-bad/issues"
Changelog = "https://github.com/zina-cantine/zina-bad/blob/main/CHANGELOG.md"

[project.scripts]
zina-server = "zina_app.cli:server"
zina-init = "zina_app.cli:init_db"
zina-migrate = "zina_app.cli:migrate"
zina-admin = "zina_app.cli:create_admin"

[tool.setuptools.packages.find]
where = ["."]
include = ["zina_app*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
zina_app = ["templates/*.html", "static/*", "migrations/*"]

# Black configuration
[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | migrations
)/
'''

# isort configuration
[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["zina_app"]
known_third_party = ["flask", "supabase", "pytest", "celery", "redis"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

# pytest configuration
[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=zina_app",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
    "--cov-fail-under=85"
]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "api: marks tests as API tests",
    "security: marks tests as security tests",
    "performance: marks tests as performance tests"
]
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning"
]

# Coverage configuration
[tool.coverage.run]
source = ["zina_app"]
omit = [
    "*/tests/*",
    "*/migrations/*",
    "*/venv/*",
    "*/env/*",
    "*/__pycache__/*",
    "*/site-packages/*"
]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod"
]
show_missing = true
precision = 2
fail_under = 85

[tool.coverage.html]
directory = "htmlcov"

# MyPy configuration
[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "supabase.*",
    "flask.*",
    "celery.*",
    "redis.*",
    "PIL.*",
    "qrcode.*",
    "reportlab.*",
    "stripe.*",
    "twilio.*"
]
ignore_missing_imports = true

# Flake8 configuration (in setup.cfg or .flake8 file)
[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503", "E501"]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
    "venv",
    ".env",
    "migrations"
]
per-file-ignores = [
    "__init__.py:F401",
    "tests/*:S101"
]

# Bandit configuration
[tool.bandit]
exclude_dirs = ["tests", "migrations"]
skips = ["B101", "B601"]

# Pylint configuration
[tool.pylint.messages_control]
disable = [
    "C0330",  # Wrong hanging indentation
    "C0326",  # Bad whitespace
    "R0903",  # Too few public methods
    "R0913",  # Too many arguments
    "W0613",  # Unused argument
    "W0142"   # Used * or ** magic
]

[tool.pylint.format]
max-line-length = 88

# Babel configuration
[tool.babel]
default_locale = "fr_FR"
output_dir = "translations"
domain = "zina"

# Sentry configuration (if using)
[tool.sentry]
dsn = "${SENTRY_DSN}"
environment = "${FLASK_ENV}"
release = "2.0.0"

# Custom tool configurations
[tool.zina]
debug = false
testing = false
production = false
database_url = "${DATABASE_URL}"
redis_url = "${REDIS_URL}"
secret_key = "${SECRET_KEY}"
